fixed horizantal scroll problem and added accessibility-final

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
         </div>
 
-        <div class="article">
+        <div class="article" id="last-article">
           <img src="./resources/images/information-guest-lecture.jpg" alt="Bearded old guy in glasses">
           <img src="./resources/images/information-guest-lecture-mobile.jpg" alt="Orientation" class="responsive-img">
           <div class="article-title">
@@ -170,9 +170,7 @@
         </div>
       </div>
     </section>
-
         <!-- Video section-->
-
     <section class="section4">
       <div class="title">
         <h1>Thesis Exhibit</h1>
@@ -180,7 +178,7 @@
       <div class="section-type-2">
         <video src="resources/videos/thesis.mp4" controls class="responsive-video" width="100%" height="auto"></video>
       <div class="featured">
-        <video src="./resources/videos/thesis.mp4" type="video/mp4" controls autoplay poster="posterimage.jpg">
+        <video src="./resources/videos/thesis.mp4" type="video/mp4" controls autoplay poster="posterimage.jpg" alt="vidoe of office building with sky going by">
         Your browser does not support html5 video tag
       </video>
         <div class="featured-info">
